# cargo_replace_test

./: Cargo.toml
any_crate/: Cargo.toml
